--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -94,8 +94,8 @@ that we can find James Bond and retrieve all of his attr-val pairs using both ty
                                       :where  [ [?eid :person/name "James Bond"] ] )
         ; Retrieve James' attr-val pairs as a map. An entity can be referenced either by EID or by a
         ; LookupRef, which is a unique attribute-value pair expressed as a vector.
-        james-map   (td/entity-map (live-db) james-eid)                       ; lookup by EID  
-        james-map2  (td/entity-map (live-db) [:person/name "James Bond"] )    ; lookup by LookupRef
+        james-map   (td/entity-map (live-db) james-eid)                       ; use EID  
+        james-map2  (td/entity-map (live-db) [:person/name "James Bond"] )    ; use LookupRef
   ]
     (is (= james-map {:person/name "James Bond" :location "London" 
                       :weapon/type #{:weapon/wit :weapon/gun} } ))
