--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -127,7 +127,7 @@ We can also use either type of EntitySpec for update
 
 ----
 
-as expected, our database contains the updated values for James & Dr. No.  Notice that, since
+As expected, our database contains the updated values for James & the doctor. Notice that, since
 `:weapon/type` is implemented as a set in Datmoic, duplicate values are not allowed and both
 antagonists have only a single gun:
 
