--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -136,12 +136,9 @@ antagonists have only a single gun:
   ; Verify current status. Notice there are no duplicate weapons.
   (let [people (get-people (live-db)) ]
     (is (= people   
-      #{ { :person/name "James Bond" :location "London"    
-           :weapon/type #{:weapon/wit :weapon/knife :weapon/gun} :person/secret-id 7 }
-         { :person/name "M"          :location "London"    
-           :weapon/type #{:weapon/guile :weapon/gun} }
-         { :person/name "Dr No"      :location "Caribbean" 
-           :weapon/type #{:weapon/guile :weapon/knife :weapon/gun} } } )))
+      #{ { :person/name "James Bond" :location "London" :weapon/type #{:weapon/wit :weapon/knife :weapon/gun} :person/secret-id 7 }
+         { :person/name "M" :location "London"          :weapon/type #{:weapon/guile :weapon/gun} }
+         { :person/name "Dr No" :location "Caribbean"   :weapon/type #{:weapon/guile :weapon/knife :weapon/gun} } } )))
 ----
 
 
