--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -217,12 +217,12 @@ In this case, we don't need to wrap the result tuple in a set and we can use the
   ; If you want just a single tuple as output, you can get it (rather than a set of
   ; tuples) using td/query-tuple.  It is an error if more than one tuple is found.
   (let [beachy    (td/query-tuple :let    [$ (live-db)]
-                                  :find   [?eid ?name]
+                                  :find   [?eid ?name] ; <- output tuple shape
                                   :where  [ [?eid :person/name ?name      ]
                                             [?eid :location    "Caribbean"] ] )
         busy      (try
                     (td/query-tuple :let    [$ (live-db)]       ; error - both James & M are in London
-                                    :find   [?eid ?name]
+                                    :find   [?eid ?name] ; <- output tuple shape
                                     :where  [ [?eid :person/name ?name    ]
                                               [?eid :location    "London" ] ] )
                     (catch Exception ex (.toString ex)))
