--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -254,6 +254,42 @@ value instead of a set of tuples of scalars:
     (is (re-seq #"IllegalStateException" busy)))  ; Exception thrown/caught since 2 people in London
 ----
 
+=== Using the Datomic Pull API
+
+If one wishes to use queries returning possibly duplicate result items, then the Datomic Pull api is
+required.  A Pull query returns results in a List (a Clojure vector), rather than a Set, so that
+duplicate result items are not discarded.  An example, let's find the location of all of our
+entities:
+
+[source,clojure]
+----
+  ; If you wish to retain duplicate results on output, you must use td/query-pull and the Datomic Pull API to return a
+  ; list of results (instead of a set).
+  (let [result-pull     (td/query-pull  :let    [$ (live-db)]               ; $ is the implicit db name
+                                        :find   [ (pull ?eid [:location]) ]   ; output :location for each ?eid found
+                                        :where  [ [?eid :location] ] )        ; find any ?eid with a :location attr
+        result-sort     (sort-by #(-> % first :location) result-pull)
+  ]
+    (is (s/validate [ts/TupleMap] result-pull))    ; a list of tuples of maps
+    (is (= result-sort  [ [ {:location "Caribbean"} ] 
+                          [ {:location "London"   } ]
+                          [ {:location "London"   } ] ] )))
+----
+
+== Using Datomic Partitions
+
+Datomic allows the user to create 'partitions' within the DB.  Datomic partitions serve solely as 
+a structural optimization, and do not control or limit who or how datoms may be accessed.  The
+effect of a partition in Datomic is to effectively "pre-sort" all entities in that partition so they
+are adjacent in storage, which *may* improve access times for related entities that are often
+accessed together.
+
+In Tupelo Datmoic, we may easily create and use partitions:
+
+[source,clojure]
+----
+----
+
 
 === tupelo.datomic - Basic functions
 
