--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -10,7 +10,7 @@ image:http://clojars.org/tupelo/latest-version.svg[ http://clojars.org/tupelo ]
 
 == Overview
 
-Have you ever wanted to jump into using Datomic but been wishing for a simpler starting point? If
+Have you ever wanted to jump into using Datomic but wished for a simpler starting point? If
 so, then Tupelo Datomic is for you.  The goal of Tupelo Datomic is to automatate all of the detail
 that rarely changes or is needed when dealing with Datomic, making your job nearly effortless.
 
