--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -243,13 +243,20 @@ value instead of a set of tuples of scalars:
                                               [?eid :location    "Caribbean"] ] )
         busy      (try
                     (td/query-scalar  :let    [$ (live-db)]
+                                      :find   [?eid] ; error - tuple [?eid ?name] is not scalar
+                                      :where  [ [?eid :person/name ?name    ]
+                                                [?eid :location  "London"  ] ] )
+                    (catch Exception ex (.toString ex)))
+        multi     (try
+                    (td/query-scalar  :let    [$ (live-db)]
                                       :find   [?eid ?name] ; error - tuple [?eid ?name] is not scalar
                                       :where  [ [?eid :person/name ?name    ]
                                                 [?eid :location  "Caribbean"  ] ] )
                     (catch Exception ex (.toString ex)))
   ]
     (is (= beachy "Dr No"))                       ; found 1 match as expected
-    (is (re-seq #"IllegalStateException" busy)))  ; Exception thrown/caught since 2 people in London
+    (is (re-seq #"IllegalStateException" busy))   ; Exception thrown/caught since 2 people in London
+    (is (re-seq #"IllegalStateException" multi))) ; Exception thrown/caught since 2 people in London
 ----
 
 === Using the Datomic Pull API
