--- a/src/tupelo/datomic.adoc
+++ b/src/tupelo/datomic.adoc
@@ -269,7 +269,7 @@ entities:
 [source,clojure]
 ----
   ; If you wish to retain duplicate results on output, you must use td/query-pull and the Datomic
-  Pull API to return a ; list of results (instead of a set).
+  ; Pull API to return a list of results (instead of a set).
   (let [result-pull     (td/query-pull  :let    [$ (live-db)]               ; $ is the implicit db name
                                         :find   [ (pull ?eid [:location]) ]   ; output :location for each ?eid found
                                         :where  [ [?eid :location] ] )        ; find any ?eid with a :location attr
